# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE 0x/xx/2009
24th Alpha Release

NEWS:


NEW: [features/enhancments]
+New Plugin Manager Dialog.
+Improved configuration options for plugins.
+Improved support for sessions. Multiple custom sessions can not be saved and
reloaded (modified code from Erik Tollerud).
+Add shortcut for LineDelete to delete line without modifying clipboard.
+Add option for automatically reloading files when they have changed on disk.
+Remember last save location when opening save as dialog.

BUG FIXES:
+Fix incorrect page count shown in print previews.
+Remember print settings throughout session and for every frame.
+Fix error when doing Copy Path from tab right click menu.
+Fix incorrectly showing autocompletion options under some cases in php files.
+Fix condition where window could be placed at (0, 0) on OSX which causes the
 frame to be placed behind the menubar.
+Fix improper detection of when to auto-unindent in Python files.
+Fix Python auto-indent from incorrectly inserting space when the cursor is
in the indentation space of a line.
+Fix Close All option in tab context menu not working on GTK.
+Fix Codebrowser not refreshing when files are opened from the file dialog
on Linux.
+Fix error that could occur while trying to save filehistory on exit.
+Fix toolbar not resizing properly when changing icon size on osx.
+Fix error in highlighing of DTD.

#-----------------------------------------------------------------------------#

VERSION 0.4.65
DATE 02/20/2009
23rd Alpha Release

NEWS:
This release contains a large number of bug fixes and improvements. Most notably
there has been a fair amount of work done on the autocompletions support. All
file types now have support for some basic word completion help. HTML and XML